--- a/index.html
+++ b/index.html
@@ -175,36 +175,38 @@
       <section id="about" class="about">
         <div class="container aos-init aos-animate" data-aos="fade-up">
           <div class="row gy-4 aos-init aos-animate" data-aos="fade-up">
-            <div class="col-lg-4">
-              <img src="assets/img/hero-bg-2.jpg" class="img-fluid" alt="" />
+            <div class="col-lg-5">
+              <!-- <img src="assets/img/hero-bg-2.jpg" class="img-fluid" alt="" data-aos="fade-up" data-aos-delay="200"/> -->
+              <video class="img-fluid" preload="auto" controlslist="nodownload" loop="" autoplay="" playsinline="" webkit-playsinline="" muted="" src="assets/video/src.mp4">
+              </video>
             </div>
-            <div class="col-lg-8">
+            <div class="col-lg-7">
               <div class="content ps-lg-5">
-                <h3 style="background-color: #e10b34; padding: 8px">
+                <h3 style="background-color: #e10b34; padding: 8px" data-aos="fade-up" data-aos-delay="400">
                   LỢI ÍCH CHÍNH KHI THAM DỰ SỰ KIỆN
                 </h3>
                 <ul>
-                  <li>
+                  <li data-aos="fade-up" data-aos-delay="100">
                     <i class="bi bi-check-circle-fill"></i> Gặp gỡ các giáo sư
                     đoạt giải Nobel và các chuyên gia STEM
-                  </li>
-                  <li>
+                  </li >
+                  <li data-aos="fade-up" data-aos-delay="100">
                     <i class="bi bi-check-circle-fill"></i> Được tiếp cận các
                     khái niệm khoa học tiên tiến
                   </li>
-                  <li>
+                  <li data-aos="fade-up" data-aos-delay="100">
                     <i class="bi bi-check-circle-fill"></i> Thăm quan các phòng
                     thí nghiệm khoa học nổi tiếng thế giới
                   </li>
-                  <li>
+                  <li data-aos="fade-up" data-aos-delay="100">
                     <i class="bi bi-check-circle-fill"></i> Nâng cao kỹ năng
                     giải quyết vấn đề
                   </li>
-                  <li>
+                  <li data-aos="fade-up" data-aos-delay="100">
                     <i class="bi bi-check-circle-fill"></i> Khám phá con đường
                     học tập và nghề nghiệp mới
                   </li>
-                  <li>
+                  <li data-aos="fade-up" data-aos-delay="100">
                     <i class="bi bi-check-circle-fill"></i> Cơ hội kết nối bạn
                     bè quốc tế
                   </li>
@@ -332,8 +334,8 @@
             style="border: 5px solid #e10b34; border-radius: 25px; margin: 5px"
           >
             <div class="col-lg-6 text-center">
-              <h3>VỀ LIYSF</h3>
-              <p>
+              <h3 data-aos="fade-up" data-aos-delay="300" >VỀ LIYSF</h3>
+              <p data-aos="fade-up" data-aos-delay="500">
                 LIYSF là một doanh nghiệp xã hội phi lợi nhuận được thành lập
                 vào năm 1959. Chúng tôi cung cấp cho học sinh, sinh viên cái
                 nhìn sâu sắc hơn về khoa học (STEM) và cách khoa học có thể được
@@ -342,8 +344,8 @@
                 tìm hiểu về văn hoá, con người của nhau thông qua niềm đam mê
                 chung về khoa học.
               </p>
-              <h3>SỨ MỆNH</h3>
-              <p>
+              <h3 data-aos="fade-up" data-aos-delay="300">SỨ MỆNH</h3>
+              <p data-aos="fade-up" data-aos-delay="300">
                 Chúng tôi trao quyền cho những người trẻ thuộc mọi hoàn cảnh để
                 theo đuổi tiềm năng của họ trong giáo dục STEM (khoa học, công
                 nghệ, kỹ thuật và toán học). Chúng tôi tin rằng việc kết nối và
@@ -353,8 +355,8 @@
                 giúp các bạn trẻ khẳng đinh vi trí của mình trên thế giới với tư
                 cách là một công dân toàn cầu.
               </p>
-              <h3>MỤC TIÊU</h3>
-              <p>
+              <h3 data-aos="fade-up" data-aos-delay="300">MỤC TIÊU</h3>
+              <p data-aos="fade-up" data-aos-delay="300">
                 Với tư cách là một doanh nghiệp hoạt động vì cộng đồng, chúng
                 tôi xác đinh rõ ràng những lợi ích chúng tôi muốn mang đến cho
                 cộng đồng của mình. Mục đích của LIYSF là mang lại lợi ích cho
