update chính tả

--- a/index.html
+++ b/index.html
@@ -182,31 +182,31 @@
             </div>
             <div class="col-lg-7">
               <div class="content ps-lg-5">
-                <h3 style="background-color: #e10b34; padding: 8px" data-aos="fade-up" data-aos-delay="400">
+                <h3 style="background-color: #e10b34; padding: 8px" data-aos="fade-up" data-aos-delay="200">
                   LỢI ÍCH CHÍNH KHI THAM DỰ SỰ KIỆN
                 </h3>
                 <ul>
-                  <li data-aos="fade-up" data-aos-delay="100">
+                  <li data-aos="fade-up" data-aos-delay="300">
                     <i class="bi bi-check-circle-fill"></i> Gặp gỡ các giáo sư
                     đoạt giải Nobel và các chuyên gia STEM
                   </li >
-                  <li data-aos="fade-up" data-aos-delay="100">
+                  <li data-aos="fade-up" data-aos-delay="300">
                     <i class="bi bi-check-circle-fill"></i> Được tiếp cận các
                     khái niệm khoa học tiên tiến
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="100">
+                  <li data-aos="fade-up" data-aos-delay="300">
                     <i class="bi bi-check-circle-fill"></i> Thăm quan các phòng
                     thí nghiệm khoa học nổi tiếng thế giới
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="100">
+                  <li data-aos="fade-up" data-aos-delay="300">
                     <i class="bi bi-check-circle-fill"></i> Nâng cao kỹ năng
                     giải quyết vấn đề
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="100">
+                  <li data-aos="fade-up" data-aos-delay="300">
                     <i class="bi bi-check-circle-fill"></i> Khám phá con đường
                     học tập và nghề nghiệp mới
                   </li>
-                  <li data-aos="fade-up" data-aos-delay="100">
+                  <li data-aos="fade-up" data-aos-delay="300">
                     <i class="bi bi-check-circle-fill"></i> Cơ hội kết nối bạn
                     bè quốc tế
                   </li>
@@ -335,7 +335,7 @@
           >
             <div class="col-lg-6 text-center">
               <h3 data-aos="fade-up" data-aos-delay="300" >VỀ LIYSF</h3>
-              <p data-aos="fade-up" data-aos-delay="500">
+              <p data-aos="fade-up" data-aos-delay="300">
                 LIYSF là một doanh nghiệp xã hội phi lợi nhuận được thành lập
                 vào năm 1959. Chúng tôi cung cấp cho học sinh, sinh viên cái
                 nhìn sâu sắc hơn về khoa học (STEM) và cách khoa học có thể được
@@ -444,7 +444,7 @@
                         án dưới dạng poster
                       </td>
                       <td>
-                        Tour Tham quan London có có hướng dẫn viên (Không bắt
+                        Tour Tham quan London có hướng dẫn viên (Không bắt
                         buộc)
                       </td>
                     </tr>
