--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
             <div class="col-lg-7">
               <div class="content ps-lg-5">
-                <h3 style="background-color: #e10b34; padding: 8px" data-aos="fade-up" data-aos-delay="200">
+                <h3 style="background-color: #e10b34; padding: 8px; margin-bottom: 30px;" data-aos="fade-up" data-aos-delay="200">
                   LỢI ÍCH CHÍNH KHI THAM DỰ SỰ KIỆN
                 </h3>
                 <ul>
