--- a/index.html
+++ b/index.html
@@ -223,33 +223,12 @@
             <h2>NHỮNG NGƯỜI CHỦ CHỐT</h2>
           </div>
 
-          <div class="row gy-4">
-            <div
-              class="col-lg-3 col-md-6 aos-init aos-animate team-member-wrapper"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <div class="team-member">
-                <div class="member-img">
-                  <img
-                    src="assets/img/team/team-1.jpg"
-                    class="img-fluid"
-                    alt=""
-                  />
-                  <div class="social">
-                    <a href=""><i class="fa-solid fa-circle-info"></i></a>
-                  </div>
-                </div>
-                <div class="member-info">
-                  <span>Giám đốc điều hành</span>
-                  <h4>RICHARD MYHILL</h4>
-                </div>
-              </div>
-            </div>
-            <!-- End Team Member -->
+          
+          <div class="row justify-content-center gy-4">
+
 
             <div
-              class="col-lg-3 col-md-6 aos-init aos-animate team-member-wrapper"
+              class="col-lg-2 col-md-6 aos-init aos-animate team-member-wrapper"
               data-aos="fade-up"
               data-aos-delay="200"
             >
@@ -272,8 +251,35 @@
             </div>
             <!-- End Team Member -->
 
+
             <div
-              class="col-lg-3 col-md-6 aos-init aos-animate team-member-wrapper"
+              class="col-lg-2 col-md-6 aos-init aos-animate team-member-wrapper"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="team-member">
+                <div class="member-img">
+                  <img
+                    src="assets/img/team/team-1.jpg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <div class="social">
+                    <a href=""><i class="fa-solid fa-circle-info"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <span>Giám đốc điều hành</span>
+                  <h4>RICHARD MYHILL</h4>
+                </div>
+              </div>
+            </div>
+            <!-- End Team Member -->
+
+            
+
+            <div
+              class="col-lg-2 col-md-6 aos-init aos-animate team-member-wrapper"
               data-aos="fade-up"
               data-aos-delay="300"
             >
@@ -297,7 +303,7 @@
             <!-- End Team Member -->
 
             <div
-              class="col-lg-3 col-md-6 aos-init aos-animate team-member-wrapper"
+              class="col-lg-2 col-md-6 aos-init aos-animate team-member-wrapper"
               data-aos="fade-up"
               data-aos-delay="400"
             >
@@ -322,6 +328,34 @@
               </div>
             </div>
             <!-- End Team Member -->
+            <div
+            class="col-lg-2 col-md-6 aos-init aos-animate team-member-wrapper"
+            data-aos="fade-up"
+            data-aos-delay="400"
+          >
+            <div class="team-member">
+              <div class="member-img">
+                <img
+                  src="assets/img/team/team-5.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="social">
+                  <a href=""><i class="fa-solid fa-circle-info"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <span>Cố vấn khoa học</span>
+                <h4>
+                  TIẾN SĨ <br />
+                  ÉMER HICKEY
+                </h4>
+              </div>
+            </div>
+          </div>
+          <!-- End Team Member -->
+
+
           </div>
         </div>
       </section>
@@ -573,9 +607,17 @@
                 CÁCH THỨC ĐĂNG KÝ
               </p>
               <p>
-                Phụ huynh, học sinh truy cập đăng ký trực tuyến và điền đầy đủ thông tin tại đây
-                <br>(Scan hoặc click mã QR)
+                Phụ huynh, học sinh truy cập đăng ký trực tuyến tại đây
+                <br>(Nhấn vào nút hoặc quét mã QR)
               </p>
+
+                <a
+                  target="_blank"
+                  href="https://docs.google.com/forms/d/e/1FAIpQLSeboNKbO3riunUfHiCwlfhN7wMnFrNMXmWkHmDzcyLTblmCEQ/viewform"
+                  class="btn-footer"
+                  >ĐĂNG KÝ THAM GIA</a
+                >
+
             </div>
 
             <div
