--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     alt=""
                   />
                   <div class="social">
-                    <a href=""><i class="fa-solid fa-circle-info"></i></a>
+                    <a href="https://www.liysf.org.uk/about-us/liysf-royal-patron"><i class="fa-solid fa-circle-info"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
@@ -265,7 +265,7 @@
                     alt=""
                   />
                   <div class="social">
-                    <a href=""><i class="fa-solid fa-circle-info"></i></a>
+                    <a href="https://www.liysf.org.uk/richard-myhill"><i class="fa-solid fa-circle-info"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
@@ -291,7 +291,7 @@
                     alt=""
                   />
                   <div class="social">
-                    <a href=""><i class="fa-solid fa-circle-info"></i></a>
+                    <a href="https://www.liysf.org.uk/liysf/principal-lectures/professor-richard-okennedy"><i class="fa-solid fa-circle-info"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
@@ -315,7 +315,7 @@
                     alt=""
                   />
                   <div class="social">
-                    <a href=""><i class="fa-solid fa-circle-info"></i></a>
+                    <a href="https://www.liysf.org.uk/liysf/principal-lectures/professor-clare-elwell"><i class="fa-solid fa-circle-info"></i></a>
                   </div>
                 </div>
                 <div class="member-info">
@@ -341,7 +341,7 @@
                   alt=""
                 />
                 <div class="social">
-                  <a href=""><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="https://www.liysf.org.uk/emer-hickey"><i class="fa-solid fa-circle-info"></i></a>
                 </div>
               </div>
               <div class="member-info">
