--- a/index.html
+++ b/index.html
@@ -200,6 +200,56 @@
     <main id="main">
 
       
+      <section id="about" class="about">
+        <div class="container aos-init aos-animate" data-aos="fade-up">
+          <div class="row gy-4 aos-init aos-animate" data-aos="fade-up">
+            
+            <div class="col-lg-7">
+              <div class="content ps-lg-5">
+                <ul>
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <i class="bi bi-check-circle-fill"></i> Trại hè STEM 15 ngày tại London
+                  </li >
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <i class="bi bi-check-circle-fill"></i> 500 học sinh, sinh viên đến từ 70 quốc gia tham dự
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <i class="bi bi-check-circle-fill"></i> Độ tuổi từ 16-21 tuổi
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <i class="bi bi-check-circle-fill"></i> Được tổ chức tại  Imperial College London 
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <i class="bi bi-check-circle-fill"></i> Với sự tham gia giảng dạy của các nhà khoa học hàng đầu thế giới
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <i class="bi bi-check-circle-fill"></i> Thăm quan các khoa hàng đầu của các trường đại học Oxford & Cambridge
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <i class="bi bi-check-circle-fill"></i> Người bảo trợ cho diễn đàn - Công chúa Hoàng gia Anh
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <i class="bi bi-check-circle-fill"></i> Học sinh có cơ hội trình bày dự án nghiên cứu của bản thân
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <i class="bi bi-check-circle-fill"></i> Đã bao gồm chi phí ăn ở trong suốt quá trình tham dự
+                  </li>
+                  <li data-aos="fade-up" data-aos-delay="300">
+                    <i class="bi bi-check-circle-fill"></i> LIYSF CIC là một tổ chức NGO
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="col-lg-5">
+              <img src="assets/img/hero-bg-2.jpg" class="img-fluid" alt="" data-aos="fade-up" data-aos-delay="200"/>
+              <!-- <video class="img-fluid" preload="auto" controlslist="nodownload" loop="" autoplay="" playsinline="" webkit-playsinline="" muted="" src="assets/video/src.mp4"> -->
+              </video>
+            </div>
+
+          </div>
+        </div>
+      </section>
 
 
       <section id="about" class="about">
