--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 <h3 style="background-color: #e10b34; padding: 8px; margin-bottom: 30px; font-size: 20px;" data-aos="fade-up" data-aos-delay="200">
                   DIỄN ĐÀN KHOA HỌC THANH NIÊN QUỐC TẾ LONDON
                 </h3>
-                <blockquote>
+                <blockquote data-aos="fade-up" data-aos-delay="300">
                   <ul>
                     <li data-aos="fade-up" data-aos-delay="300">
                      Trại hè STEM 15 ngày tại London
