--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
     <section id="hero-1" class="d-flex align-items-center justify-content-center">
       <div class="container" data-aos="fade-up" >
   
-        <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
+        <div class="row justify-content-center" >
           <div class="col-xl-12 col-lg-12">
-            <h1 style="color: #e10b34; background-color: white; display: inline-block; padding: 35px 50px 20px 50px;">DIỄN ĐÀN KHOA HỌC</h1>
-            <h2 style="color: white; background-color: #e10b34; display: inline-block; padding: 10px; margin-top: 20px; font-size: 30px;">THANH NIÊN QUỐC TẾ LONDON LẦN THỨ 65 ( LIYSF)</h2>
+            <h1 data-aos="fade-up" data-aos-delay="100" style="color: #e10b34; background-color: white; display: inline-block; padding: 35px 50px 20px 50px;">DIỄN ĐÀN KHOA HỌC</h1>
+            <h2 data-aos="fade-up" data-aos-delay="400" style="color: white; background-color: #e10b34; display: inline-block; padding: 10px; margin-top: 20px; font-size: 30px;">THANH NIÊN QUỐC TẾ LONDON LẦN THỨ 65 ( LIYSF)</h2>
           </div>
         </div>
         
         <div class="row justify-content-center" style="margin-top: 90px;">
-          <div  data-aos="fade-up" data-aos-delay="200">
+          <div  data-aos="fade-up" data-aos-delay="700">
             <a
               target="_blank"
               href="https://docs.google.com/forms/d/e/1FAIpQLSeboNKbO3riunUfHiCwlfhN7wMnFrNMXmWkHmDzcyLTblmCEQ/viewform"
